WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217642
Fix the macCatalyst build ("reference to 'Rect' is ambiguous")
https://bugs.webkit.org/show_bug.cgi?id=217642
Summary
Fix the macCatalyst build ("reference to 'Rect' is ambiguous")
Tim Horton
Reported
2020-10-12 17:50:42 PDT
Fix the macCatalyst build ("reference to 'Rect' is ambiguous")
Attachments
Patch
(3.95 KB, patch)
2020-10-12 17:50 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-10-12 17:50:57 PDT
Created
attachment 411182
[details]
Patch
Tim Horton
Comment 2
2020-10-12 17:50:59 PDT
<
rdar://problem/70224629
>
EWS
Comment 3
2020-10-12 18:55:35 PDT
Committed
r268381
: <
https://trac.webkit.org/changeset/268381
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411182
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug