Cherry-pick r268381. rdar://problem/70260409

Fix the macCatalyst build ("reference to 'Rect' is ambiguous")
    https://bugs.webkit.org/show_bug.cgi?id=217642
    <rdar://problem/70224629>

    Reviewed by Wenson Hsieh.

    * UIProcess/ios/forms/WKDateTimeInputControl.mm:
    (-[WKDateTimePicker initWithView:datePickerMode:]):
    (-[WKDateTimePicker shouldPresentGregorianCalendar:]):
    (-[WKDateTimePicker controlBeginEditing]):
    (-[WKDateTimeInputControl initWithView:]):
    An earlier unified source's `using namespace WebCore` inside `namespace WebKit`
    and then WKDateTimeInputControl's `using namespace WebKit` in the global namespace
    resulted in once-again conflicting definitions of `Rect` between CSS
    code and MacTypes.h.

    Canonical link: https://commits.webkit.org/230390@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268381 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.239@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@268419 268f45cc-cd09-0410-ab3c-d52691b4dbfc